k8s-config/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  type: LoadBalancer
  selector:
    pod: url-shortener-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
