k8s-config/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
  labels:
    deployment: url-shortener-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: url-shortener-backend
  template:
    metadata:
      labels:
        name: url-shortener-backend
        pod: url-shortener-backend
    spec:
      containers:
      - name: url-shortener-backend
        image: IMAGE_NAME
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  type: LoadBalancer
  selector:
    pod: url-shortener-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
